--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "math.h": "c",
         "universe-data.h": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "gravitation.h": "c"
     }
 }
